# chessboard

./: .gitignore  LICENSE  README.md  gui_main.py  main.py  pyproject.toml  requirements.txt
classes/: bot.py  color_position.py  game.py  move.py  position.py
gui/: utils.py
images/: __init__.py  icon.icns
simple_bot/: evaluation.py  move_search.py  parameters.py  utils.py
simple_bot/bot1/: evaluation.py
simple_bot/bot2/: evaluation.py
simple_bot/opening_book/: fen_uci.json
test/: test_bot_play_self.py  test_game1
tests/: test_color_position.py  test_gui.py
utils/: board_functions.py  parse_fen.py  parse_notation.py
version/: __init__.py
