[tool.poetry]
name = "chessboard"
version = "0.1.0"
description = ""
authors = ["Asaph Ho Canyang <asaphho@yahoo.com.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"



[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
