[tool.poetry]
name = "chessboard"
version = "0.1.0"
description = ""
authors = ["asaph"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySimpleGUI = "^5.0.6"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
